# HU18-LP-Mesh-Weather-Station

./: .gitignore  MockUp.blend  README.md  gamble.py
BMP280/: CMakeLists.txt  sdkconfig
BMP280/components/bmx280/: CMakeLists.txt  bmx280.c
BMP280/components/mpu6050/: CMakeLists.txt
BMP280/components/mpu6050/include/: mpu6050.h
BMP280/components/mpu6050/test/: mpu6050_test.c
BMP280/main/: .BARO-IDF.c  BARO-IDF.c  CMakeLists.txt  GY91.c  idf_component.yml
GPS/main/: GPS_Parser.c  NEO_6M_UART.c  NEO_6M_UART.h
humid/: CMakeLists.txt
humid/components/dht11/: CMakeLists.txt  dht11.c  dht11.h
humid/components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h  ds18b20_types.h
humid/components/onewire_bus/: CMakeLists.txt
humid/components/onewire_bus/include/: onewire_bus.h  onewire_bus_impl_rmt.h  onewire_cmd.h  onewire_crc.h  onewire_device.h  onewire_types.h
humid/components/onewire_bus/interface/: onewire_bus_interface.h
humid/components/onewire_bus/src/: onewire_bus_api.c  onewire_bus_impl_rmt.c  onewire_crc.c  onewire_device.c
humid/main/: CMakeLists.txt  main.c
pcnt/template/main/: template.c
